bloom/vendor/pin-project/tests/ui/cfg/packed_sneaky-span-issue-1.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
  --> $DIR/packed_sneaky-span-issue-1.rs:6:1
   |
6  | / struct S {
7  | |     //~^ ERROR may not be used on #[repr(packed)] types
8  | |     #[cfg(not(any()))]
9  | |     #[pin]
...  |
13 | |     f: u8,
14 | | }
   | |_^
